template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "servers_Company_Name_sql_name": {
            "defaultValue": "Company_Name-sql",
            "type": "String"
        },
        "loadBalancers_Company_Name_LB_01_name": {
            "defaultValue": "Company_Name-LB-01",
            "type": "String"
        },
        "virtualMachines_Company_Name_WEB_01_name": {
            "defaultValue": "Company_Name-WEB-01",
            "type": "String"
        },
        "vaults_Company_Name_BACKUP_01_name": {
            "defaultValue": "Company_Name-BACKUP-01",
            "type": "String"
        },
        "storageAccounts_Company_Namestorageacc_name": {
            "defaultValue": "Company_Namestorageacc",
            "type": "String"
        },
        "networkInterfaces_Company_Name_web_01500_name": {
            "defaultValue": "Company_Name-web-01500",
            "type": "String"
        },
        "virtualNetworks_Company_Name_VNET1_name": {
            "defaultValue": "Company_Name-VNET1",
            "type": "String"
        },
        "publicIPAddresses_Company_Name_LB_01_PUBIP_name": {
            "defaultValue": "Company_Name-LB-01-PUBIP",
            "type": "String"
        },
        "databases_master_name": {
            "defaultValue": "master",
            "type": "String"
        },
        "databases_app_name_name": {
            "defaultValue": "app_name",
            "type": "String"
        },
        "firewallRules_PTG_name": {
            "defaultValue": "PTG",
            "type": "String"
        },
        "keys_ServiceManaged_name": {
            "defaultValue": "ServiceManaged",
            "type": "String"
        },
        "networkSecurityGroups_Company_Name_nsg_01_name": {
            "defaultValue": "Company_Name-nsg-01",
            "type": "String"
        },
        "firewallRules_PTG_wifi_name": {
            "defaultValue": "PTG_wifi",
            "type": "String"
        },
        "auditingPolicies_Default_name": {
            "defaultValue": "Default",
            "type": "String"
        },
        "firewallRules_Audacia_IP_name": {
            "defaultValue": "Audacia IP",
            "type": "String"
        },
        "encryptionProtector_current_name": {
            "defaultValue": "current",
            "type": "String"
        },
        "advisors_DropIndex_name": {
            "defaultValue": "DropIndex",
            "type": "String"
        },
        "firewallRules_AllowAllWindowsAzureIps_name": {
            "defaultValue": "AllowAllWindowsAzureIps",
            "type": "String"
        },
        "advisors_CreateIndex_name": {
            "defaultValue": "CreateIndex",
            "type": "String"
        },
        "advisors_SchemaIssue_name": {
            "defaultValue": "SchemaIssue",
            "type": "String"
        },
        "subnets_Company_Name_Subnet1_name": {
            "defaultValue": "Company_Name-Subnet1",
            "type": "String"
        },
        "auditingPolicies_Default_name_1": {
            "defaultValue": "Default",
            "type": "String"
        },
        "geoBackupPolicies_Default_name": {
            "defaultValue": "Default",
            "type": "String"
        },
        "advisors_ForceLastGoodPlan_name": {
            "defaultValue": "ForceLastGoodPlan",
            "type": "String"
        },
        "backupLongTermRetentionVaults_RegisteredVault_name": {
            "defaultValue": "RegisteredVault",
            "type": "String"
        },
        "advisors_DbParameterization_name": {
            "defaultValue": "DbParameterization",
            "type": "String"
        },
        "securityRules_OctopusTentacle_name": {
            "defaultValue": "OctopusTentacle",
            "type": "String"
        },
        "transparentDataEncryption_current_name": {
            "defaultValue": "current",
            "type": "String"
        },
        "securityRules_default_allow_rdp_name": {
            "defaultValue": "default-allow-rdp",
            "type": "String"
        },
        "backupLongTermRetentionPolicies_Default_name": {
            "defaultValue": "Default",
            "type": "String"
        },
        "virtualMachines_Company_Name_WEB_01_id": {
            "defaultValue": "/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Compute/disks/Company_Name-WEB-01_OsDisk_1_2f329986432d489096d4c87b60cbe55c",
            "type": "String"
        },
        "virtualMachines_Company_Name_WEB_01_id_1": {
            "defaultValue": "/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Compute/disks/Company_Name-WEB-01-Data-01",
            "type": "String"
        },
        "loadBalancers_Company_Name_LB_01_id": {
            "defaultValue": "/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Network/loadBalancers/Company_Name-LB-01/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_Company_Name_LB_01_id_1": {
            "defaultValue": "/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Network/loadBalancers/Company_Name-LB-01/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_Company_Name_LB_01_id_2": {
            "defaultValue": "/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Network/loadBalancers/Company_Name-LB-01/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_Company_Name_LB_01_id_3": {
            "defaultValue": "/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Network/loadBalancers/Company_Name-LB-01/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_Company_Name_LB_01_id_4": {
            "defaultValue": "/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Network/loadBalancers/Company_Name-LB-01/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Compute/virtualMachines/Company_Name-WEB-01'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_Company_Name_WEB_01_name')]",
            "apiVersion": "2017-03-30",
            "location": "uksouth",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter-smalldisk",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_Company_Name_WEB_01_name'),'_OsDisk_1_2f329986432d489096d4c87b60cbe55c')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS",
                            "id": "[parameters('virtualMachines_Company_Name_WEB_01_id')]"
                        },
                        "diskSizeGB": 64
                    },
                    "dataDisks": [
                        {
                            "lun": 0,
                            "name": "[concat(parameters('virtualMachines_Company_Name_WEB_01_name'),'-Data-01')]",
                            "createOption": "Attach",
                            "caching": "None",
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS",
                                "id": "[parameters('virtualMachines_Company_Name_WEB_01_id_1')]"
                            },
                            "diskSizeGB": 64
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_Company_Name_WEB_01_name')]",
                    "adminUsername": "serveradmin",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_Company_Name_web_01500_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_Company_Namestorageacc_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_Company_Name_web_01500_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_Company_Namestorageacc_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Network/loadBalancers/Company_Name-LB-01'.",
            "type": "Microsoft.Network/loadBalancers",
            "name": "[parameters('loadBalancers_Company_Name_LB_01_name')]",
            "apiVersion": "2017-06-01",
            "location": "uksouth",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "2d3547a4-1d28-4014-924c-9db075b25a4c",
                "frontendIPConfigurations": [
                    {
                        "name": "LoadBalancerFrontEnd",
                        "etag": "W/\"9f0497f9-f434-4202-8850-2e0381f060fe\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_Company_Name_LB_01_PUBIP_name'))]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "LB-WEB",
                        "etag": "W/\"9f0497f9-f434-4202-8850-2e0381f060fe\"",
                        "properties": {
                            "provisioningState": "Succeeded"
                        }
                    }
                ],
                "loadBalancingRules": [],
                "probes": [],
                "inboundNatRules": [
                    {
                        "name": "FTP-WEB-01",
                        "etag": "W/\"9f0497f9-f434-4202-8850-2e0381f060fe\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_Company_Name_LB_01_id')]"
                            },
                            "frontendPort": 21,
                            "backendPort": 21,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp"
                        }
                    },
                    {
                        "name": "RDP-WEB-01",
                        "etag": "W/\"9f0497f9-f434-4202-8850-2e0381f060fe\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_Company_Name_LB_01_id_1')]"
                            },
                            "frontendPort": 3389,
                            "backendPort": 3389,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp"
                        }
                    },
                    {
                        "name": "HTTP-WEB-01",
                        "etag": "W/\"9f0497f9-f434-4202-8850-2e0381f060fe\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_Company_Name_LB_01_id_2')]"
                            },
                            "frontendPort": 80,
                            "backendPort": 80,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp"
                        }
                    },
                    {
                        "name": "HTTPS-WEB-01",
                        "etag": "W/\"9f0497f9-f434-4202-8850-2e0381f060fe\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_Company_Name_LB_01_id_3')]"
                            },
                            "frontendPort": 443,
                            "backendPort": 443,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp"
                        }
                    },
                    {
                        "name": "Octopus-WEB01",
                        "etag": "W/\"9f0497f9-f434-4202-8850-2e0381f060fe\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_Company_Name_LB_01_id_4')]"
                            },
                            "frontendPort": 10933,
                            "backendPort": 10933,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp"
                        }
                    }
                ],
                "ouCompany_NameoundNatRules": [],
                "inboundNatPools": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_Company_Name_LB_01_PUBIP_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Network/networkInterfaces/Company_Name-web-01500'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_Company_Name_web_01500_name')]",
            "apiVersion": "2017-06-01",
            "location": "uksouth",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "a4a2c52a-7cce-4087-93f9-c86873e3b5d1",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"d9bd38f4-3e33-4a7b-96f8-8ff8397e9993\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.1.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Company_Name_VNET1_name'), parameters('subnets_Company_Name_Subnet1_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4",
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_Company_Name_LB_01_name')), '/backendAddressPools/LB-WEB')]"
                                }
                            ],
                            "loadBalancerInboundNatRules": [
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_Company_Name_LB_01_name')), '/inboundNatRules/FTP-WEB-01')]"
                                },
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_Company_Name_LB_01_name')), '/inboundNatRules/RDP-WEB-01')]"
                                },
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_Company_Name_LB_01_name')), '/inboundNatRules/HTTP-WEB-01')]"
                                },
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_Company_Name_LB_01_name')), '/inboundNatRules/HTTPS-WEB-01')]"
                                },
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_Company_Name_LB_01_name')), '/inboundNatRules/Octopus-WEB01')]"
                                }
                            ]
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "2kdx2qype1oe5fqahnqxnfuy0b.zx.internal.cloudapp.net"
                },
                "macAddress": "00-22-48-01-FB-EB",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Company_Name_nsg_01_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_Company_Name_WEB_01_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Company_Name_VNET1_name'), parameters('subnets_Company_Name_Subnet1_name'))]",
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_Company_Name_LB_01_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Company_Name_nsg_01_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_Company_Name_WEB_01_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Network/networkSecurityGroups/Company_Name-nsg-01'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_Company_Name_nsg_01_name')]",
            "apiVersion": "2017-06-01",
            "location": "uksouth",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "10acccbb-a63f-4c2a-9805-b39d9ebd1dde",
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "etag": "W/\"dba1160c-01b2-4567-b286-2c4518333213\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "10.0.1.4",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "OctopusTentacle",
                        "etag": "W/\"dba1160c-01b2-4567-b286-2c4518333213\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "10933",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "10.0.1.4",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"dba1160c-01b2-4567-b286-2c4518333213\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"dba1160c-01b2-4567-b286-2c4518333213\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"dba1160c-01b2-4567-b286-2c4518333213\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOuCompany_Nameound",
                        "etag": "W/\"dba1160c-01b2-4567-b286-2c4518333213\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow ouCompany_Nameound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "OuCompany_Nameound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOuCompany_Nameound",
                        "etag": "W/\"dba1160c-01b2-4567-b286-2c4518333213\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow ouCompany_Nameound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "OuCompany_Nameound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOuCompany_Nameound",
                        "etag": "W/\"dba1160c-01b2-4567-b286-2c4518333213\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all ouCompany_Nameound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "OuCompany_Nameound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Network/publicIPAddresses/Company_Name-LB-01-PUBIP'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_Company_Name_LB_01_PUBIP_name')]",
            "apiVersion": "2017-06-01",
            "location": "uksouth",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "e15a8557-ac17-4b20-b5b7-91e921f6edf6",
                "ipAddress": "51.140.181.102",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Network/virtualNetworks/Company_Name-VNET1'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_Company_Name_VNET1_name')]",
            "apiVersion": "2017-06-01",
            "location": "uksouth",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "437e87e2-260f-4fdc-9600-3b61769698d1",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/22"
                    ]
                },
                "subnets": [
                    {
                        "name": "Company_Name-Subnet1",
                        "etag": "W/\"25051e7d-8d98-442f-a904-131f622a318e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.1.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.RecoveryServices/vaults/Company_Name-BACKUP-01'.",
            "type": "Microsoft.RecoveryServices/vaults",
            "sku": {
                "name": "RS0",
                "tier": "Standard"
            },
            "name": "[parameters('vaults_Company_Name_BACKUP_01_name')]",
            "apiVersion": "2016-06-01",
            "location": "uksouth",
            "scale": null,
            "properties": {},
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql'.",
            "type": "Microsoft.Sql/servers",
            "kind": "v12.0",
            "name": "[parameters('servers_Company_Name_sql_name')]",
            "apiVersion": "2015-05-01-preview",
            "location": "uksouth",
            "scale": null,
            "properties": {
                "administratorLogin": "sqladmin",
                "version": "12.0"
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-rg1/providers/Microsoft.Storage/storageAccounts/Company_Namestorageacc'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_Company_Namestorageacc_name')]",
            "apiVersion": "2017-06-01",
            "location": "uksouth",
            "tags": {},
            "scale": null,
            "properties": {
                "encryption": {
                    "keySource": "Microsoft.Storage",
                    "services": {
                        "blob": {
                            "enabled": true
                        },
                        "file": {
                            "enabled": true
                        }
                    }
                },
                "networkAcls": {
                    "bypass": "AzureServices",
                    "defaultAction": "Allow",
                    "ipRules": [],
                    "virtualNetworkRules": []
                },
                "supportsHttpsTrafficOnly": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Network/networkSecurityGroups/Company_Name-nsg-01/securityRules/default-allow-rdp'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_Company_Name_nsg_01_name'), '/', parameters('securityRules_default_allow_rdp_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "10.0.1.4",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Company_Name_nsg_01_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Network/networkSecurityGroups/Company_Name-nsg-01/securityRules/OctopusTentacle'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_Company_Name_nsg_01_name'), '/', parameters('securityRules_OctopusTentacle_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "10933",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "10.0.1.4",
                "access": "Allow",
                "priority": 1010,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Company_Name_nsg_01_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Network/virtualNetworks/Company_Name-VNET1/subnets/Company_Name-Subnet1'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_Company_Name_VNET1_name'), '/', parameters('subnets_Company_Name_Subnet1_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Company_Name_VNET1_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/auditingPolicies/Default'.",
            "type": "Microsoft.Sql/servers/auditingPolicies",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('auditingPolicies_Default_name'))]",
            "apiVersion": "2014-04-01",
            "location": "UK South",
            "scale": null,
            "properties": {
                "auditingState": "Disabled",
                "eventTypesToAudit": null,
                "storageAccountName": null,
                "storageAccountKey": null,
                "storageAccountSecondaryKey": null,
                "storageTableEndpoint": null,
                "storageAccountResourceGroupName": null,
                "storageAccountSubscriptionId": null,
                "fullAuditLogsTableName": null,
                "auditLogsTableName": null,
                "retentionDays": null
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/backupLongTermRetentionVaults/RegisteredVault'.",
            "type": "Microsoft.Sql/servers/backupLongTermRetentionVaults",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('backupLongTermRetentionVaults_RegisteredVault_name'))]",
            "apiVersion": "2014-04-01",
            "location": "UK South",
            "scale": null,
            "properties": {
                "recoveryServicesVaultResourceId": null
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/databases/master'.",
            "type": "Microsoft.Sql/servers/databases",
            "kind": "v12.0,system",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('databases_master_name'))]",
            "apiVersion": "2014-04-01-preview",
            "location": "UK South",
            "scale": null,
            "properties": {
                "databaseId": "55515175-0139-42b8-b902-622de97d5702",
                "edition": "System",
                "status": "Online",
                "serviceLevelObjective": "System1",
                "collation": "SQL_Latin1_General_CP1_CI_AS",
                "maxSizeBytes": "32212254720",
                "creationDate": "2017-11-17T14:40:43.603Z",
                "currentServiceObjectiveId": "c99ac918-dbea-463f-a475-16ec020fdc12",
                "requestedServiceObjectiveId": "c99ac918-dbea-463f-a475-16ec020fdc12",
                "requestedServiceObjectiveName": "System1",
                "sampleName": null,
                "defaultSecondaryLocation": "UK West",
                "earliestRestoreDate": null,
                "elasticPoolName": null,
                "containmentState": 2,
                "readScale": "Disabled",
                "failoverGroupId": null,
                "zoneRedundant": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/databases/app_name'.",
            "type": "Microsoft.Sql/servers/databases",
            "kind": "v12.0,user",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('databases_app_name_name'))]",
            "apiVersion": "2014-04-01-preview",
            "location": "UK South",
            "scale": null,
            "properties": {
                "databaseId": "ba3f0ff3-9cca-4feb-8df4-b0bff25c863e",
                "edition": "Standard",
                "status": "Online",
                "serviceLevelObjective": "S2",
                "collation": "SQL_Latin1_General_CP1_CI_AS",
                "maxSizeBytes": "268435456000",
                "creationDate": "2017-11-17T14:41:32.403Z",
                "currentServiceObjectiveId": "455330e1-00cd-488b-b5fa-177c226f28b7",
                "requestedServiceObjectiveId": "455330e1-00cd-488b-b5fa-177c226f28b7",
                "requestedServiceObjectiveName": "S2",
                "sampleName": null,
                "defaultSecondaryLocation": "UK West",
                "earliestRestoreDate": "2017-11-17T15:12:06.097Z",
                "elasticPoolName": null,
                "containmentState": 2,
                "readScale": "Disabled",
                "failoverGroupId": null,
                "zoneRedundant": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/firewallRules/AllowAllWindowsAzureIps'.",
            "type": "Microsoft.Sql/servers/firewallRules",
            "kind": "v12.0",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('firewallRules_AllowAllWindowsAzureIps_name'))]",
            "apiVersion": "2014-04-01-preview",
            "location": "UK South",
            "scale": null,
            "properties": {
                "startIpAddress": "0.0.0.0",
                "endIpAddress": "0.0.0.0"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/firewallRules/Audacia IP'.",
            "type": "Microsoft.Sql/servers/firewallRules",
            "kind": "v12.0",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('firewallRules_Audacia_IP_name'))]",
            "apiVersion": "2014-04-01-preview",
            "location": "UK South",
            "scale": null,
            "properties": {
                "startIpAddress": "141.170.26.28",
                "endIpAddress": "141.170.26.28"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/firewallRules/PTG'.",
            "type": "Microsoft.Sql/servers/firewallRules",
            "kind": "v12.0",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('firewallRules_PTG_name'))]",
            "apiVersion": "2014-04-01-preview",
            "location": "UK South",
            "scale": null,
            "properties": {
                "startIpAddress": "80.193.70.130",
                "endIpAddress": "80.193.70.130"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/firewallRules/PTG_wifi'.",
            "type": "Microsoft.Sql/servers/firewallRules",
            "kind": "v12.0",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('firewallRules_PTG_wifi_name'))]",
            "apiVersion": "2014-04-01-preview",
            "location": "UK South",
            "scale": null,
            "properties": {
                "startIpAddress": "94.175.249.100",
                "endIpAddress": "94.175.249.100"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/encryptionProtector/current'.",
            "type": "Microsoft.Sql/servers/encryptionProtector",
            "kind": "servicemanaged",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('encryptionProtector_current_name'))]",
            "apiVersion": "2015-05-01-preview",
            "scale": null,
            "properties": {
                "serverKeyName": "ServiceManaged",
                "serverKeyType": "ServiceManaged"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/keys/ServiceManaged'.",
            "type": "Microsoft.Sql/servers/keys",
            "kind": "servicemanaged",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('keys_ServiceManaged_name'))]",
            "apiVersion": "2015-05-01-preview",
            "scale": null,
            "properties": {
                "serverKeyType": "[parameters('keys_ServiceManaged_name')]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/databases/app_name/advisors/CreateIndex'.",
            "type": "Microsoft.Sql/servers/databases/advisors",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('databases_app_name_name'), '/', parameters('advisors_CreateIndex_name'))]",
            "apiVersion": "2014-04-01",
            "scale": null,
            "properties": {
                "autoExecuteValue": "Disabled"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]",
                "[resourceId('Microsoft.Sql/servers/databases', parameters('servers_Company_Name_sql_name'), parameters('databases_app_name_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/databases/app_name/advisors/DropIndex'.",
            "type": "Microsoft.Sql/servers/databases/advisors",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('databases_app_name_name'), '/', parameters('advisors_DropIndex_name'))]",
            "apiVersion": "2014-04-01",
            "scale": null,
            "properties": {
                "autoExecuteValue": "Disabled"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]",
                "[resourceId('Microsoft.Sql/servers/databases', parameters('servers_Company_Name_sql_name'), parameters('databases_app_name_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/databases/app_name/advisors/DbParameterization'.",
            "type": "Microsoft.Sql/servers/databases/advisors",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('databases_app_name_name'), '/', parameters('advisors_DbParameterization_name'))]",
            "apiVersion": "2014-04-01",
            "scale": null,
            "properties": {
                "autoExecuteValue": "Disabled"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]",
                "[resourceId('Microsoft.Sql/servers/databases', parameters('servers_Company_Name_sql_name'), parameters('databases_app_name_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/databases/app_name/advisors/SchemaIssue'.",
            "type": "Microsoft.Sql/servers/databases/advisors",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('databases_app_name_name'), '/', parameters('advisors_SchemaIssue_name'))]",
            "apiVersion": "2014-04-01",
            "scale": null,
            "properties": {
                "autoExecuteValue": "Disabled"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]",
                "[resourceId('Microsoft.Sql/servers/databases', parameters('servers_Company_Name_sql_name'), parameters('databases_app_name_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/databases/app_name/advisors/ForceLastGoodPlan'.",
            "type": "Microsoft.Sql/servers/databases/advisors",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('databases_app_name_name'), '/', parameters('advisors_ForceLastGoodPlan_name'))]",
            "apiVersion": "2014-04-01",
            "scale": null,
            "properties": {
                "autoExecuteValue": "Disabled"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]",
                "[resourceId('Microsoft.Sql/servers/databases', parameters('servers_Company_Name_sql_name'), parameters('databases_app_name_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/databases/app_name/auditingPolicies/Default'.",
            "type": "Microsoft.Sql/servers/databases/auditingPolicies",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('databases_app_name_name'), '/', parameters('auditingPolicies_Default_name_1'))]",
            "apiVersion": "2014-04-01",
            "location": "UK South",
            "scale": null,
            "properties": {
                "auditingState": "Disabled",
                "eventTypesToAudit": null,
                "storageAccountName": null,
                "storageAccountKey": null,
                "storageAccountSecondaryKey": null,
                "storageTableEndpoint": null,
                "storageAccountResourceGroupName": null,
                "storageAccountSubscriptionId": null,
                "useServerDefault": null,
                "fullAuditLogsTableName": null,
                "auditLogsTableName": null,
                "retentionDays": null
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]",
                "[resourceId('Microsoft.Sql/servers/databases', parameters('servers_Company_Name_sql_name'), parameters('databases_app_name_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/databases/app_name/backupLongTermRetentionPolicies/Default'.",
            "type": "Microsoft.Sql/servers/databases/backupLongTermRetentionPolicies",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('databases_app_name_name'), '/', parameters('backupLongTermRetentionPolicies_Default_name'))]",
            "apiVersion": "2014-04-01",
            "location": "UK South",
            "scale": null,
            "properties": {
                "state": "Disabled",
                "recoveryServicesBackupPolicyResourceId": null
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]",
                "[resourceId('Microsoft.Sql/servers/databases', parameters('servers_Company_Name_sql_name'), parameters('databases_app_name_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/databases/app_name/geoBackupPolicies/Default'.",
            "type": "Microsoft.Sql/servers/databases/geoBackupPolicies",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('databases_app_name_name'), '/', parameters('geoBackupPolicies_Default_name'))]",
            "apiVersion": "2014-04-01",
            "location": "UK South",
            "scale": null,
            "properties": {
                "state": "Enabled"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]",
                "[resourceId('Microsoft.Sql/servers/databases', parameters('servers_Company_Name_sql_name'), parameters('databases_app_name_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/ba8d118f-0eee-4345-96f2-d69ca6717603/resourceGroups/Company_Name-RG1/providers/Microsoft.Sql/servers/Company_Name-sql/databases/app_name/transparentDataEncryption/current'.",
            "type": "Microsoft.Sql/servers/databases/transparentDataEncryption",
            "name": "[concat(parameters('servers_Company_Name_sql_name'), '/', parameters('databases_app_name_name'), '/', parameters('transparentDataEncryption_current_name'))]",
            "apiVersion": "2014-04-01",
            "location": "UK South",
            "scale": null,
            "properties": {
                "status": "Enabled"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', parameters('servers_Company_Name_sql_name'))]",
                "[resourceId('Microsoft.Sql/servers/databases', parameters('servers_Company_Name_sql_name'), parameters('databases_app_name_name'))]"
            ]
        }
    ]
}
